@@ -1,3 +1,11 @@
+2000-03-08  Havoc Pennington  <hp@redhat.com>
+
+	* gconf/gconf.c (gconf_init): exit on error.
+
+	* examples/simple-controller.c (main): fix gconf_init() error
+
+	* examples/simple-view.c (main): fix gconf_init() error 
+
 2000-03-06  Havoc Pennington  <hp@redhat.com>
 
 	* doc/intro-article.sgml: Add the examples
